substrate/frame/support/test/tests/pallet_ui/call_no_return.stderr
error: Invalid pallet::call, require return type DispatchResultWithPostInfo
  --> tests/pallet_ui/call_no_return.rs:34:7
   |
34 |         pub fn foo(origin: OriginFor<T>) {}
   |             ^^
